-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.8, 6.4.3
-
None
-
Ubuntu-22.04 - WSL Windows 11
-
-
0aa9b0853 (dev), 3e799aa19 (6.5)
When opening the attached qmake project and trying to run it, the ressource specified on line 4 of loopproject.pro can't be found. This causes the following message to be printed in the issues tab forever.
:-1: warning: Failure to find: AAAAAAAAAAAAA.qrc
For Gerrit Dashboard: QTBUG-112743 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
471629,2 | qmake: Fix infinite make loop if RESOURCES contains nonexistent .qrc | dev | qt/qtbase | Status: MERGED | +2 | 0 |
472713,2 | qmake: Fix infinite make loop if RESOURCES contains nonexistent .qrc | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |